--- a/src/styles.css
+++ b/src/styles.css
@@ -6,11 +6,6 @@ body {
 }
 html, body {
     height: 100%;
-    /* cursor: none; */
-}
-img {
-    /* disable chrome browser hover cards: https://support.google.com/chrome/thread/17467192?hl=en */
-    /* cursor: none; */
 }
 
 html {
@@ -21,4 +16,9 @@ h1, p {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 250%;
+}
+
+* {
+    /* disable chrome browser hover cards: https://support.google.com/chrome/thread/17467192?hl=en */
+    /* cursor: none; */
 }
